welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: identifier expected but 'var' found.
move(nbPas: Int,versLAvant: Boolean): var={
                                      ^