welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(nbPas: Int,versLAvant: Boolean): var={
	if (versLAvant==true){
		avance(nbPas)
	}
	else recule();
}
